@@ -17,7 +17,6 @@
 	  
   <dependencies>
 
-
 	<dependency>
 	  <groupId>${project.groupId}</groupId>
 	  <artifactId>anchor-launcher</artifactId>
@@ -57,6 +56,56 @@
   </dependencies>
 	
   <build>
+  
+  
+    <pluginManagement>
+        <plugins>
+          <plugin>
+            <groupId>com.github.akman</groupId>
+            <artifactId>jpackage-maven-plugin</artifactId>
+            <version>0.1.5</version>
+                    <configuration>
+                      
+                      <input>${project.build.directory}/anchor-${project.version}-anchor/anchor-${project.version}/lib</input>
+                      <mainjar>anchor-launcher.jar</mainjar>
+                      <mainclass>org.anchoranalysis.launcher.Launch</mainclass>              
+                      
+                      <!--
+                        Specifies the location in which generated output files are placed.
+                        Default value: $?{project.build.directory}/jpackage
+                      -->
+                      <dest>${project.build.directory}/jpackage</dest>
+                      
+                      
+                        <!-- Enable console output from jpackage -->
+                    <verbose>true</verbose>
+                      
+                      <!--
+                        Specifies version of the application and/or package.
+                      -->
+                      <appversion>1.0.0</appversion>
+                      
+                      <!--
+                        Specifies description of the application.
+                      -->
+                      <description>Anchor Image Analysis</description>
+                      
+                      <!--
+                        Specifies vendor of the application.
+                      -->
+                      <vendor>Owen Feehan</vendor>
+                      
+                      <!--
+                        Specifies the options to pass to the Java runtime.
+                      -->
+                      <javaoptions>-Dlogging.level=INFO -Djava.util.logging.config.file=logging.properties --enable-native-access=ALL-UNNAMED -Djava.library.path=$APPDIR</javaoptions>
+                      
+                    </configuration>             
+          </plugin>
+        </plugins>
+     </pluginManagement>
+  
+  
     <plugins>
     
     	<!--  Unpack ONNX Runtime JAR, so the native libs can be copied into the respective disbiutions -->
@@ -91,107 +140,6 @@
        </plugin>
        
 	
- <plugin>
-	        <artifactId>maven-antrun-plugin</artifactId>
-	        <version>3.0.0</version>
-	        <executions>
-
-
-						<execution>
-							<id>prepare-package</id>
-							<phase>prepare-package</phase>
-							<configuration>
-							  <target>
-								
-								<echo message="Deleting the windowsExe/ directory: ${project.build.directory}/windowsExe"/>
-								<delete dir="${project.build.directory}/windowsExe/" />
-								
-								<echo message="Building EXES in: ${project.build.directory}/anchor-${project.version}/windowsExe"/>					
-								<mkdir dir="${project.build.directory}/windowsExe" />
-				
-							  </target>
-							</configuration>
-							<goals>
-							  <goal>run</goal>
-							</goals>
-						  </execution>
-
-	          <!-- Automatically copies build files to a directory ${anchor.home.deploy} to make it
-	             easier during development to update the distribution -->
-	          <execution>
-			  <id>install</id>
-	            <phase>install</phase>
-	            <configuration>
-				
-	              <target if="anchor.home.deploy">
-	              	<!--  Deletes the existing deploy directory (to prevent multiple JARs as SNAPSHOTs resolve to timestamps 
-	              			and copies necessary files inside.
-	              			
-	              			Lastly, makes the anchor binary executable on Linux
-	              	-->
-
-					<echo message="Deleting the directory: ${anchor.home.deploy}/"/>
-					<delete dir="${anchor.home.deploy}/" />
-					
-					<echo message="Copying a distribution into: ${anchor.home.deploy}/"/>					
-					<mkdir dir="${anchor.home.deploy}/" />
-	
-						<!--  We add in a ../ to bring us back to the top-level of the multi-module project -->
-					  <copy todir="${anchor.home.deploy}/">
-							<fileset dir="${project.build.directory}/anchor-${project.version}-windows/anchor-${project.version}/" />
-					  </copy>
-	
-	              </target>
-	            </configuration>
-	            <goals>
-	              <goal>run</goal>
-	            </goals>
-	          </execution>
-	        </executions>
-	      </plugin>	
-	
-	  <!-- Run Launch4J plugins before the assembly-plugin to make sure the .exes are included in the tar.gz and zip files. -->
-	  <plugin>
-		 <groupId>com.akathist.maven.plugins.launch4j</groupId>
-		 <artifactId>launch4j-maven-plugin</artifactId>
-		 <version>2.1.1</version>
-		 <executions>
-		 
-		 <!-- This generates an anchor.exe (command-line) with Launch4J and places it in the target distribution -->
-		 <execution>
-				 <id>l4j-clui1</id>
-				 <phase>prepare-package</phase>
-				 <goals>
-					 <goal>launch4j</goal>
-				 </goals>
-				 <configuration>
-					  <headerType>console</headerType>
-					  <outfile>${project.build.directory}/windowsExe/anchor.exe</outfile>
-					  <jar>anchor-launcher</jar>
-					  <dontWrapJar>true</dontWrapJar>
-					  <errTitle>Anchor</errTitle>
-					  <downloadUrl>http://java.com/download</downloadUrl>
-					
-					  <classPath>
-						<mainClass>org.anchoranalysis.launcher.Launch</mainClass>
-						<postCp>%EXEDIR%/*.jar;%EXEDIR%/../lib/*.jar</postCp>
-						<addDependencies>false</addDependencies>
-					  </classPath>
-					  
-					  <jre>
-						<minVersion>1.8</minVersion>
-						<initialHeapPercent>20</initialHeapPercent>
-						<maxHeapPercent>80</maxHeapPercent>
-						<opts>
-							<opt>-Donnxruntime.native.path=%EXEDIR%/../lib/onnxruntime</opt>
-						</opts>
-					  </jre>
-				 </configuration>
-			 </execution>
-			 
-		 </executions>
-	 </plugin>	
-	
       <!-- Creates a folder with all the files needed for running Anchor in target/ -->
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
@@ -204,9 +152,7 @@
             <phase>package</phase>
             <configuration>
               <descriptors>
-                <descriptor>src/assembly/windows.xml</descriptor>
-                <descriptor>src/assembly/macos.xml</descriptor>
-                <descriptor>src/assembly/linux.xml</descriptor>
+                <descriptor>src/assembly/anchor.xml</descriptor>
               </descriptors>
               <attach>true</attach>
             </configuration>
@@ -232,5 +178,134 @@
 	  
     </plugins>
   </build>
+  
+  <profiles>
+      <!-- JPackager on Windows -->
+      <profile>
+          <id>windows</id>
+          <activation>
+            <os><family>Windows</family></os>
+          </activation>
+          <build>
+            <plugins>
+                <plugin>
+                  <groupId>com.github.akman</groupId>
+                  <artifactId>jpackage-maven-plugin</artifactId>
+                  <executions>
+                    <execution>
+                      <id>jpackage-installer</id>
+                      <phase>verify</phase>
+                      <goals>
+                        <goal>jpackage</goal>
+                      </goals>
+                      <configuration>
+                      
+                            <!-- Upper-case first character to match Windows style -->
+                            <name>Anchor</name>
+                            
+                            <!--
+                        Specifies the relative sub-path under the default installation
+                        location of the application for Windows.
+                        
+                        Lower-case first character to match Windows style.
+                        -->
+                            <installdir>Anchor</installdir>
+
+                            <!-- Indicate its a CLI app -->
+                            <winconsole>true</winconsole>
+                      
+                            <!--
+                              Enable adding a dialog to choose a directory in which
+                              the product is installed.
+                              Default value: false
+                            -->
+                            <windirchooser>true</windirchooser>
+                            
+                            <!--
+                              Enable requesting to perform an install on a per-user basis.
+                              Default value: false
+                            -->
+                            <winperuserinstall>true</winperuserinstall>
+                            
+                            <!--
+                              UUID associated with upgrades for this package.
+                            -->
+                            <winupgradeuuid>990bbd96-da42-437d-af8a-aeca5e0a7a5a</winupgradeuuid>
+                    
+                      </configuration>
+                    </execution>
+                  </executions>
+                </plugin>	
+            </plugins>
+          </build>
+      </profile>
+      
+      
+      <!-- JPackager on Linux -->
+      <profile>
+          <id>linux</id>
+          <activation>
+            <os><name>Linux</name></os>
+          </activation>
+          <build>
+            <plugins>
+                <plugin>
+                  <groupId>com.github.akman</groupId>
+                  <artifactId>jpackage-maven-plugin</artifactId>
+                  <executions>
+                    <execution>
+                      <id>jpackage-installer</id>
+                      <phase>verify</phase>
+                      <goals>
+                        <goal>jpackage</goal>
+                      </goals>
+                      <configuration>
+  
+                              <!-- Lower-case first character to match Linux style -->
+                            <name>anchor</name>
+                            
+                            <linuxpackagedeps>libasound2t64,  libmd0, libpng16-16t64</linuxpackagedeps>
+                                            
+                      </configuration>
+                    </execution>
+                  </executions>
+                </plugin>	
+            </plugins>
+          </build>
+      </profile>
+      
+      
+      <!-- JPackager on MacOS -->
+      <profile>
+          <id>MacOS</id>
+          <activation>
+            <os><name>Mac OS X</name></os>
+          </activation>
+          <build>
+            <plugins>
+                <plugin>
+                  <groupId>com.github.akman</groupId>
+                  <artifactId>jpackage-maven-plugin</artifactId>
+                  <executions>
+                    <execution>
+                      <id>jpackage-installer</id>
+                      <phase>verify</phase>
+                      <goals>
+                        <goal>jpackage</goal>
+                      </goals>
+                      <configuration>
+
+                            <!-- Lower-case first character to match MacOS style -->
+                            <name>anchor</name>
+                            
+                      </configuration>
+                    </execution>
+                  </executions>
+                </plugin>	
+            </plugins>
+          </build>
+      </profile>      
+      
+  </profiles>
   
 </project>
